[package]
name = "faas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.1.1" }
wasmtime = "0.28.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.11", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
tower-http = { version = "0.1.1", features = ["full"] }
bytes = "1.0.1"
serde_json = "1.0.66"
anyhow = "1.0.42"